--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1757,52 +1757,49 @@ body {
   text-align: center;
   color: #ffffff;
 }
-.cid-rl9BUh5DAB {
+.cid-rmErgTL6El {
   padding-top: 0px;
-  padding-bottom: 45px;
-  background: #972424;
+  padding-bottom: 30px;
+  background-color: #972424;
 }
-.cid-rl9BUh5DAB .media-container-row {
-  margin: 0 auto;
-  align-items: stretch;
-  -webkit-align-items: stretch;
+.cid-rmErgTL6El .card-img {
+  background-color: #fff;
 }
-.cid-rl9BUh5DAB .media-container-row .img-item {
-  display: -webkit-flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  z-index: 1;
-  -webkit-flex-direction: column;
-  -webkit-justify-content: center;
+.cid-rmErgTL6El .card-box {
+  padding: 2rem;
+  background-color: #ffffff;
 }
-.cid-rl9BUh5DAB .media-container-row .img-item img {
-  width: 100%;
-  min-height: 1px;
-}
-.cid-rl9BUh5DAB .media-container-row .img-item .img-caption {
-  background: #efefef;
-  z-index: 2;
-  padding: 1rem 1rem;
-  word-break: break-word;
-}
-.cid-rl9BUh5DAB .media-container-row .img-item .img-caption p {
+.cid-rmErgTL6El h4 {
+  font-weight: 500;
   margin-bottom: 0;
+  text-align: left;
 }
-.cid-rl9BUh5DAB .media-container-row .img-item.item1 {
-  padding: 0 2rem 0 0;
+.cid-rmErgTL6El p {
+  text-align: left;
 }
-@media (max-width: 992px) {
-  .cid-rl9BUh5DAB .img-item {
-    width: 100% !important;
+.cid-rmErgTL6El .mbr-text {
+  color: #767676;
+  text-align: center;
+}
+.cid-rmErgTL6El .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rmErgTL6El .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+@media (min-width: 992px) {
+  .cid-rmErgTL6El .my-col {
+    flex: 0 0 20%;
+    max-width: 20%;
+    padding: 15px;
+    -webkit-flex: 0 0 20%;
   }
-  .cid-rl9BUh5DAB .img-item.item1 {
-    width: 100%;
-    flex-basis: initial !important;
-    padding: 0 0 2rem 0 !important;
-    -webkit-flex-basis: initial !important;
-  }
+}
+.cid-rmErgTL6El .card-title {
+  text-align: center;
 }
 .cid-r1PYc6QXhH {
   padding-top: 30px;
