--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1094,31 +1094,59 @@ section.lazy-placeholder:after {
   text-align: center;
   color: #ffffff;
 }
-.cid-rOK3IjnkKp {
+.cid-rV0LcYc7Id {
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #972424;
 }
-.cid-rOK3IjnkKp h4 {
+.cid-rV0LcYc7Id h4 {
   font-weight: 500;
   margin-bottom: 0;
   text-align: left;
 }
-.cid-rOK3IjnkKp p {
+.cid-rV0LcYc7Id p {
   color: #767676;
   text-align: left;
 }
-.cid-rOK3IjnkKp .card-box {
+.cid-rV0LcYc7Id .card-box {
   padding-top: 2rem;
 }
-.cid-rOK3IjnkKp .card-wrapper {
+.cid-rV0LcYc7Id .card-wrapper {
   height: 100%;
 }
-.cid-rOK3IjnkKp .card-title {
+.cid-rV0LcYc7Id .card-title {
   text-align: center;
   color: #ffffff;
 }
-.cid-rOK3IjnkKp P {
+.cid-rV0LcYc7Id P {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-rV0LdZJefx {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #972424;
+}
+.cid-rV0LdZJefx h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rV0LdZJefx p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rV0LdZJefx .card-box {
+  padding-top: 2rem;
+}
+.cid-rV0LdZJefx .card-wrapper {
+  height: 100%;
+}
+.cid-rV0LdZJefx .card-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-rV0LdZJefx P {
   color: #ffffff;
   text-align: center;
 }
