--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1244,7 +1244,7 @@ section.lazy-placeholder:after {
 .cid-sb7IS07Vxl {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-image: url("../../../assets/images/mbr-1.jpeg");
+  background-color: #ffffff;
 }
 .cid-sb7IS07Vxl .media-container-column {
   align-items: center;
@@ -1260,7 +1260,6 @@ section.lazy-placeholder:after {
 }
 .cid-sb7IS07Vxl .mbr-testimonial .panel-item {
   background-color: #972424;
-  background: linear-gradient(#972424, transparent);
 }
 .cid-sb7IS07Vxl .mbr-testimonial .card-block {
   -webkit-flex-grow: 0;
@@ -1275,6 +1274,7 @@ section.lazy-placeholder:after {
   margin-bottom: 1.6rem;
   overflow: hidden;
   border-radius: 50%;
+  border-radius: 0;
 }
 .cid-sb7IS07Vxl .mbr-testimonial .card-block .testimonial-photo img {
   width: 100%;
